--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ relative_links:
   enabled: true
   collections: true
 include:
-  - CONTRIBUTING.md
+  - index.md
   - README.md
   - LICENSE.md
   - COPYING.md
