tech stack setup

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 theme: jekyll-theme-tactile
+title: Onboarding
+subtitle: hah
+decription: adfasdfadf
 plugins:
   - jekyll-relative-links
 relative_links:
@@ -6,10 +9,3 @@ relative_links:
   collections: true
 include:
   - index.md
-  - README.md
-  - LICENSE.md
-  - COPYING.md
-  - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
-  - ISSUE_TEMPLATE.md
-  - PULL_REQUEST_TEMPLATE.md
